--- a/permissions.cfg
+++ b/permissions.cfg
@@ -137,8 +137,15 @@ setr vmenu_sync_to_machine_time false
 # Add players to any group you want, can be group.admin, group.moderator or any other group.<name> you want.
 
 # Admin group players:
+# tholeb
 add_principal identifier.steam:110000105959047 group.admin
 add_principal identifier.license:4510587c13e0b645eb8d24bc104601792277ab98 group.admin
+
+# Ben
+add_principal identifier.steam:110000105c88be4 group.admin
+
+# Kogo
+add_principal identifier.steam:11000010b25c942 group.admin
 
 
 # Moderator group players:
