--- a/server.cfg
+++ b/server.cfg
@@ -41,6 +41,8 @@ start dpemotes
 start modded_vehicles
 start mapping
 
+start bullshit
+
 ## Add system admins
 add_ace group.admin command allow # allow all commands
 add_ace group.admin command.quit deny # but don't allow quit
