Ref: server.cfg

--- a/server.cfg
+++ b/server.cfg
@@ -7,24 +7,24 @@
 ## You CAN edit the following:
 endpoint_add_tcp "0.0.0.0:30120"
 endpoint_add_udp "0.0.0.0:30120"
+set mysql_connection_string "user=admin;database=fivem;password=admin;host=127.0.0.1"
+set mysql_debug "Console"
 sv_maxclients 24
 set steam_webApiKey "8F7E6FB59B36146D4B62FC474ED5A1FA"
-sets tags "default, deployer"
+sets tags "freeroam"
 
-## You MAY edit the following:
+## Server config
 sv_licenseKey "5v6mjfkxfc5vn0q6nlu903xuudvu4akw"
-sv_hostname "tholeb Freeroam built"
-sets sv_projectName "tholeb Freeroam"
-sets sv_projectDesc "Recipe for the base resources required to run a minimal FiveM server."
-sets locale "fr-FR" 
+sv_hostname "Freeroam"
 onesync on
 sv_enforceGameBuild mpsecurity
+sets sv_projectName "sf_freeroam"
+sets sv_projectDesc "The sunfive's core team freeroam"
+sets locale "fr-FR" 
+sets discord "https://discord.sunfive.fr"
 
 exec permissions.cfg
 start vMenu
-
-set mysql_connection_string "user=admin;database=fivem;password=admin;host=127.0.0.1"
-set mysql_debug "Console"
 
 ensure mysql-async
 
