feat(server): :sparkles: Permission Raznove & Razod

--- a/server.cfg
+++ b/server.cfg
@@ -47,3 +47,5 @@ start bullshit
 add_ace group.admin command allow # allow all commands
 add_ace group.admin command.quit deny # but don't allow quit
 add_principal identifier.fivem:68610 group.admin #tholeb
+add_principal identifier.fivem:11044343 group.admin #razod
+add_principal identifier.fivem:532235 group.admin #raznove
