--- a/server.cfg
+++ b/server.cfg
@@ -15,7 +15,7 @@ sets tags "freeroam"
 
 ## Server config
 sv_licenseKey "soogdlnukr2yomubd8jdl16spc0ir5my"
-sv_hostname "Test Server"
+sv_hostname "Vision 2"
 ## [txAdmin CFG validator]: onesync MUST only be set in the txAdmin settings page.
 # onesync on
 sv_enforceGameBuild mpsecurity
