--- a/server.cfg
+++ b/server.cfg
@@ -16,7 +16,8 @@ sets tags "freeroam"
 ## Server config
 sv_licenseKey "5v6mjfkxfc5vn0q6nlu903xuudvu4akw"
 sv_hostname "Freeroam"
-onesync on
+## [txAdmin CFG validator]: onesync MUST only be set in the txAdmin settings page.
+# onesync on
 sv_enforceGameBuild mpsecurity
 sets sv_projectName "sf_freeroam"
 sets sv_projectDesc "The sunfive's core team freeroam"
