refactor(cfg): :recycle: Modif Project Name

--- a/server.cfg
+++ b/server.cfg
@@ -19,8 +19,8 @@ sv_hostname "Test Push"
 ## [txAdmin CFG validator]: onesync MUST only be set in the txAdmin settings page.
 # onesync on
 sv_enforceGameBuild mpsecurity
-sets sv_projectName "sf_freeroam"
-sets sv_projectDesc "The sunfive's core team freeroam"
+sets sv_projectName "test_server"
+sets sv_projectDesc "Raznove Test Server*"
 sets locale "fr-FR" 
 sets discord "https://discord.sunfive.fr"
 
